--- a/source/stylesheets/responsive.scss
+++ b/source/stylesheets/responsive.scss
@@ -43,7 +43,7 @@
         padding: 0.5em 1em;
         width: 100%;
         nav {
-          padding: 0;
+          max-width: 100%;
         }
         .header-content, nav, .notes {
           margin-bottom: 0;
